# randLS

./: .gitignore  :w  ;w  CMakeLists.txt  README  README.md  save  simple_runner_fgmres.cpp
core/blas/: blas.cpp  blas.hpp
core/dense/: dense.cpp  dense.hpp
core/matrix/: mtx.cpp  mtx.hpp  mtxop.cpp  mtxop.hpp
core/matrix/dense/: dense.cpp  dense.hpp
core/matrix/sparse/: sparse.cpp  sparse.hpp
core/memory/: detail.cpp  detail.hpp  magma_context.cpp  magma_context.hpp  memory.cpp  memory.hpp
core/preconditioner/: gaussian.cpp  gaussian.hpp  generalized_split.cpp  generalized_split.hpp  preconditioner.cpp  preconditioner.hpp  sketchqr.cpp  sketchqr.hpp
core/sketch/: countsketch.cpp  countsketch.hpp  gaussian.cpp  gaussian.hpp  sketch.hpp
core/solver/: fgmres.cpp  fgmres.hpp  ir.cpp  ir.hpp  lsqr.cpp  lsqr.hpp  solver.cpp  solver.hpp
cuda/: gaussiansketch.cuh
cuda/preconditioner/: preconditioner_kernels.cu  preconditioner_kernels.cuh
cuda/sketch/: countsketch.cu  countsketch.cuh  gaussiansketch.cu  gaussiansketch.cuh
cuda/solver/: lsqr_kernels.cu  lsqr_kernels.cuh
include/: base_types.hpp  randls.hpp
runners/: run_fgmres.cpp  run_fgmres_dense.cpp  run_fgmres_example0.cpp  run_fgmres_example_large0.cpp  run_fgmres_sparse_all.cpp  run_fgmres_sparse_small.cpp  run_ir.cpp  run_lsqr.cpp  run_lsqr_sparse.cpp  run_lsqr_sparse_all.cpp  run_lsqr_sparse_ipdps_all.cpp  run_lsqr_sparse_ipdps_paper.cpp  runner_helper.hpp
utils/: convert.cpp  convert.hpp  init_kernels.cpp  init_kernels.hpp  io.cpp  io.hpp  kernels.cpp  mmio.c  mmio.h
